fixed: thick horizontal scrollbars in otter themes

--- a/themes/perverse-otter/variables.scss
+++ b/themes/perverse-otter/variables.scss
@@ -114,6 +114,7 @@ $right-panel-width: 450px;
 
 ::-webkit-scrollbar {
 	width: 8px;
+	height: 8px;
 }
 ::-webkit-scrollbar-track {
 	border-radius:6px;
