--- a/themes/sadistic-otter/variables.scss
+++ b/themes/sadistic-otter/variables.scss
@@ -107,6 +107,7 @@ $right-panel-width: 450px;
 
 ::-webkit-scrollbar {
 	width: 8px;
+	height: 8px;
 }
 ::-webkit-scrollbar-track {
 	border-radius:6px;
